# Research_Agent

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  config.py  main.py  pyproject.toml  read.py  requirements.txt
agents/: critic.py  deep_reader.py  llm.py  planner.py  search.py  writer.py
src/research_agent/: __init__.py  config.py  main.py  read.py  write.py
src/research_agent/agents/: critic.py  deep_reader.py  llm.py  planner.py  polish.py  search.py  synthesizer.py  writer.py
src/research_agent/references/: writing_guide.py
src/research_agent/tools/: arxiv_tool.py  gpu_utils.py  marker_tool.py  pdf_tool.py  semantic_scholar_tool.py
tools/: arxiv_tool.py  gpu_utils.py  marker_tool.py  pdf_tool.py  semantic_scholar_tool.py
