[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "DeepSeek + arXiv + Semantic Scholar 科研文献综述 / 单篇精读 Agent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Siriuswjz" }]
dependencies = [
    "arxiv==2.1.3",
    "openai>=1.0.0",
    "requests>=2.32",
    "diskcache>=5.6",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0"]
dev = ["pytest", "build", "twine"]

[project.scripts]
research-agent = "research_agent.main:main"
research-agent-read = "research_agent.read:main"

[project.urls]
Homepage = "https://github.com/Siriuswjz/Research_Agent"
Issues = "https://github.com/Siriuswjz/Research_Agent/issues"

[tool.setuptools.packages.find]
where = ["src"]
